--- a/poem.html
+++ b/poem.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <style>
-    .bigDiv {
+    body {
         padding: 30px;
         border: 4px dashed black;
         border-radius: 30px;
