--- a/form.html
+++ b/form.html
@@ -6,13 +6,26 @@
     <title>Document</title>
 </head>
 <style>
+    body{
+        margin-left: 30px;
+        margin-top: 30px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
     form{
         border: 1px solid;
-        width: 40%;
-        box-shadow: 10px 10px ;
+        width: 35%;
+        box-shadow: 0px 0px 20px 10px rgb(105, 105, 153);
     }
     div{
         margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    label{
+        margin-top: 10px;
+        margin-bottom 10px;
+    }
+    input{
+        margin-bottom: 10px;
     }
 </style>
 <body>
@@ -37,8 +50,7 @@
         <input type="text" id="email" style="width: 75%;"><br>
 
         <label for="">phone</label><br>
-        <input type="text" width="20%"> - <input type="text" width="20%"> - <input type="text" width="20%"><br>
-        
+        <input type="text" style="width: 15%;"> - <input type="text" style="width: 15%;"> - <input type="text" style="width: 15%;"><br>
         <input type="button" value="Submit">
         <button>Submit</button>
          </div>
