--- a/form.html
+++ b/form.html
@@ -32,26 +32,29 @@
         <div>
         <h1>Oder Form</h1>
         <label for="buy">what would you like to buy?</label><br>
-        <select name="buy" id="">
+        <select name="buy" id="" style="width: 20%;">
             <option value="">A</option>
             <option value="">B</option>
         </select><br>
-
         <label for="oder">How many would you like to order</label><br>
         <input type="radio" name="order" checked><span> 1-$10</span><br>
         <input type="radio" name="order" ><span> 2-$20</span><br>
         <input type="radio" name="order"><span> 3-$25</span><br>
 
         <label for="name">Name *</label><br>
-        <input type="text" placeholder="First name" style="width: 35%"><input type="text" placeholder="Last Name" style="width: 35%;"><br>
+        <input type="text" placeholder="First name" style="width: 35%;" ><input type="text" placeholder="Last Name" style="width: 35%;"><br>
 
         <label for="email">email</label><br>
-        <input type="text" id="email" style="width: 75%;"><br>
+        <input type="email" id="email" style="width: 72%;"><br>
 
         <label for="">phone</label><br>
-        <input type="text" style="width: 15%;"> - <input type="text" style="width: 15%;"> - <input type="text" style="width: 15%;"><br>
+        <input type="number" style="width: 15%;"> - <input type="number" style="width: 15%;"> - <input type="number" style="width: 15%;"><br>
+
+        <label for="name">Name *</label><br>
+        <input type="password" placeholder="password" style="width: 35%;" ><br>
+        
         <input type="button" value="Submit">
-         </div>
+    </div>
     </form>
 </body>
 </html>
