--- a/28-02-2024/Study-2CSS.html
+++ b/28-02-2024/Study-2CSS.html
@@ -24,7 +24,7 @@
     <!-- name -->
     <div class="information">
         <label for="">Tên học viên *</label><br>
-        <input type="text" value="" placeholder="your answer">
+        <input class="text1" type="text" value="" placeholder="your answer">
     </div>
     <!-- your class -->
     <div class="information">
@@ -93,6 +93,52 @@
                     <td><input type="radio" name="quality"></td>
                 </tr>
             </table>
+    </div>
+            <div class="information">
+                <label for="distribution">Việc phân bổ kiến thức cho từng module có phù hợp không? *</label><br>
+                    <input type="radio" name="distribution"><span>Phù hợp</span><br>
+                    <input type="radio" name="distribution"><span>Không phù hợp</span><br>
+                    <input type="radio" name="distribution"><span>Other:</span><br>
+            </div> 
+
+            <div class="information">
+                <label for="learning theory">Thời gian học lý thuyết có phù hợp với bạn không? *</label><br>
+                    <input type="radio" name="learning theory"><span>Phù hợp</span><br>
+                    <input type="radio" name="learning theory"><span>Không phù hợp</span><br>
+                    <input type="radio" name="learning theory"><span>Other:</span><br>
+            </div> 
+
+            <div class="information">
+                <label for="learn practice">Thời gian học thực hành có phù hợp với bạn không? *</label><br>
+                    <input type="radio" name="learn practice"><span>Phù hợp</span><br>
+                    <input type="radio" name="learn practice"><span>Không phù hợp</span><br>
+                    <input type="radio" name="learn practice"><span>Other:</span><br>
+            </div> 
+
+            <div class="information">
+                <label for="">Bạn có thường xuyên hoàn thành nhiệm vụ ngày đúng thiết kế của chương trình không? </label><br>
+                    <input type="radio" name=""><span>có</span><br>
+                    <input type="radio" name=""><span>không</span><br>
+                    <input type="radio" name=""><span>Other:</span><br>
+            </div> 
+
+            <div class="information">
+                <label for="">13. Bạn có tự tin mình đã có đủ năng lực (kiến thức, kỹ năng,...) để học module tiếp theo? </label><br>
+                    <input type="radio" name=""><span>có</span><br>
+                    <input type="radio" name=""><span>không</span><br>
+                    <input type="radio" name=""><span>Other:</span><br>
+            </div> 
+
+            <div class="information">
+                <label for="">Bạn có gặp lỗi nào khi sử dụng học liệu không? (Tên module - Tên bài - Link bài học bị lỗi)</label><br>
+                    <input class="text2" type="text" name="" placeholder="your answer">
+            </div> 
+
+            <div class="information">
+                <label for="">Ý kiến khác (nếu có).</label><br>
+                    <input class="text3" type="text" name="" placeholder="your answer">
+            </div> 
+
     </div>
 </body>
 </html>
