--- a/28-02-2024/Study-2CSS.html
+++ b/28-02-2024/Study-2CSS.html
@@ -7,6 +7,7 @@
 </head>
 <link rel="stylesheet" href="Study2.css">
 <body>
+    <div>
     <!-- intro -->
     <div class="intro">
         <h1>Khảo sát học viên về chương trình CGA Java</h1>
@@ -138,7 +139,7 @@
                 <label for="">Ý kiến khác (nếu có).</label><br>
                     <input class="text3" type="text" name="" placeholder="your answer">
             </div> 
-
     </div>
+        <button class="button">submit</button>
 </body>
 </html>
