--- a/03-01-2024 -Layout/Study-layout.html
+++ b/03-01-2024 -Layout/Study-layout.html
@@ -24,23 +24,23 @@
     <div id="left">
         <div class="div1">
             <img src="view/IMG1.jfif" alt="khách sạn nobi">
-            <P><Strong>Welcome đến với khách sạn Nobi</Strong> - 5,147,528 lượt xem</P><br>
-            <p>Channel Fun</p>
+            <P><Strong>Welcome đến với khách sạn Nobi</Strong> - 5,147,528 lượt xem<br></P>
+            <p>Channel Fun</p><br>
         </div>
         <div class="div1">
             <img src="view/IMG2.jfif" alt="suneo khổng lồ">
-            <P><Strong>Suneo khổng lồ</Strong> - 5,147,528 lượt xem</P><br>
-            <p>Doremon Viet sub</p>
+            <P><Strong>Suneo khổng lồ</Strong> - 5,147,528 lượt xem<br></P>
+            <p>Doremon Viet sub</p><br> 
         </div>
         <div class="div1">
             <img src="view/IMG3.jfif" alt="Còi điều khuyển vật">
-            <P><Strong>Còi điều khuyển vật</Strong> - 5,147,528 lượt xem</P><br>
-            <p>Doremon Viet sub</p>
+            <P><Strong>Còi điều khuyển vật</Strong> - 5,147,528 lượt xem<br></P>
+            <p>Doremon Viet sub</p><br>
         </div>
         <div class="div1">
             <img src="view/IMG4.jfif" alt="Chiếc máy tạo kẹo bông">
-            <P><Strong>Chiếc máy tạo kẹo bông</Strong> - 5,147,528 lượt xem</P><br>
-            <p>Doremon Viet sub</p>
+            <P><Strong>Chiếc máy tạo kẹo bông</Strong> - 5,147,528 lượt xem<br></P>
+            <p>Doremon Viet sub</p><br>
         </div>
     </div>
     <!-- content -->
@@ -54,7 +54,7 @@
     </div>
     <!-- footer -->
     <div id="footer">
-        <p>© 2017 - thiết kế web bởi trang hoathinhvn.net</p>
+        <center><p>© 2017 - thiết kế web bởi trang hoathinhvn.net</p></center>
     </div>
 </body>
 </html>
