--- a/15.03.2024/VNexpress.html
+++ b/15.03.2024/VNexpress.html
@@ -13,10 +13,34 @@
     </header>
     <nav>
         <ul>
-            <li>thoi su</li>
-            <li>goc nhin</li>
-            <li>the gioi</li>
-            <li>.....</li>
+            <li class="thoisu">thời sự
+                <ul class="thoisu1" type="none">
+                    <li>Chính trị</li>
+                    <li>Dân sinh</li>
+                    <li>Lao động - Việc làm</li>
+                    <li>GIao thông</li>
+                    <li>Mekong</li>
+                    <li>Quỹ hy vọng</li>
+                </ul>
+            </li>
+            <li>Góc nhìn</li>
+            <li>Thế giới</li>
+            <li>Video</li>
+            <li>Podcasts</li>
+            <li>Kinh doanh</li>
+            <li>Bất động sản</li>
+            <li>Khoa học</li>
+            <li>Giải trí</li>
+            <li>Thể thao</li>
+            <li>Pháp luật</li>
+            <li>Giáo dục</li>
+            <li>Sức khỏe</li>
+            <li>Đời sống</li>
+            <li>Du lịch</li>
+            <li>Xe</li>
+            <li>Ý kiến</li>
+            <li>Tâm sự</li>
+            <li>Thư giãn</li>
         </ul>
     </nav>
     <main>
@@ -27,27 +51,30 @@
                         <img src="https://i1-thethao.vnecdn.net/2024/03/15/man-city-real-madrid-jpeg-1710-9412-3846-1710501677.jpg?w=680&h=408&q=100&dpr=1&fit=crop&s=IcVBBn8hsfpCAFswWkADYA" alt="">
                     </div>
                     <div class="impor-text-top-content">
-                        <p>Man City gặp Real Madrid ở tứ kết Champions League
-                            THỤY SĨMan City gặp Real, còn Arsenal có cơ hội đòi nợ Bayern Munich tại tứ kết Champions League 2023-2024, sau lễ bốc thăm phân nhánh ở Nyon.
-                            
-                            Kết quả chia cặp tứ kết Champions League mùa này được coi như "trong mơ", ...
-                            
-                            Thể thao</p>
+                        <h3>Man City gặp Real Madrid ở tứ kết Champions League</h3>
+                            <p class="information">Tổng thống Biden đang cố gắng tăng tốc để thuyết phục cử tri, sau những kết quả thăm dò cho thấy ông tụt hậu so với Trump trên đường đua Nhà Trắng.</p><br>
+                            <p class="information">Trong một sự kiện gần đây, Adrianne Shropshire, giám đốc điều hành</p> <br>
+                            <p class="information">Thế giới</p>
                     </div>
                 </div>
+                <hr>
 
                 <div class="info-text-buttom">
                     <div class="info-text-buttom-1">
-                        <h3>Đề xuất hạn chế mua bán vàng miếng bằng tiền mặt</h3>
+                        <h3><a href="">Đề xuất hạn chế mua bán vàng miếng bằng tiền mặt</a></h3>
                         <img src="https://i1-kinhdoanh.vnecdn.net/2024/03/15/z5252811954519-9ea0f8c00d114b9-5745-1585-1710509351.jpg?w=300&h=180&q=100&dpr=1&fit=crop&s=PwLR8bC2EB-uvb_AxPm_fA" alt="">
                     </div>
                     <div class="info-text-buttom-2">
-                        <h3>Đề xuất hạn chế mua bán vàng miếng bằng tiền mặt</h3>
-                        <img src="https://i1-kinhdoanh.vnecdn.net/2024/03/15/z5252811954519-9ea0f8c00d114b9-5745-1585-1710509351.jpg?w=300&h=180&q=100&dpr=1&fit=crop&s=PwLR8bC2EB-uvb_AxPm_fA" alt="">
+                        <h3><a href="">Thêm 5 ca ngộ độc ở Nha Trang dương tính với khuẩn Salmonella</a></h3>
+                        <img src="https://i1-suckhoe.vnecdn.net/2024/03/16/tp-da176image-story-jpeg-17105-6700-2208-1710584808.jpg?w=300&h=180&q=100&dpr=1&fit=crop&s=BhSXFzHk7U6TToZdOzq2yA" alt="">
                     </div>
                     <div class="info-text-buttom-3">
-                        <h3>Đề xuất hạn chế mua bán vàng miếng bằng tiền mặt</h3>
-                        <img src="https://i1-kinhdoanh.vnecdn.net/2024/03/15/z5252811954519-9ea0f8c00d114b9-5745-1585-1710509351.jpg?w=300&h=180&q=100&dpr=1&fit=crop&s=PwLR8bC2EB-uvb_AxPm_fA" alt="">
+                        <h3><a href="" style="color: red;">Góc nhìn</a><br><a href="">'Vẽ bậy' trên phố</a></h3>
+                        <p class="information">Thường 'mọc lên' bằng những hình vẽ nguệch ngoạc, kỳ lạ và xấu xí trên phố, graffiti dễ bị hiểu lầm và ác cảm.</p>
+                        <div>
+                            <a href="">Trình phương quân</a>
+                            <img src="https://i1-vnexpress.vnecdn.net/2024/01/24/Quanpng-1706069246.png?w=100&h=100&q=100&dpr=1&fit=crop&s=KnIYCpnFTcnjBNs_bNITQA" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
