--- a/18-03-2024/case-study1.html/case-study1.html
+++ b/18-03-2024/case-study1.html/case-study1.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feature-img">
+            <div class="features-img">
                 <img src="images/barber-man.jpg" alt="">
             </div>
         </div>
