--- a/20.03.2024/btrap_b2.html
+++ b/20.03.2024/btrap_b2.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
 </head>
 <body>
     <div class="container-fluid container-border">
@@ -21,6 +21,16 @@
             <div class="col-12 col-sm-6 col-md-3 feature-number"></div>
             <div class="col-12 col-sm-6 col-md-3 feature-number"></div>
         </div>
+    </div>
+    <div class="author-info p-5 bg-light border mt-4 mx-5">
+        <h1>MR. Devid Smith</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, neque debitis repellendus eligendi autem, praesentium est reprehenderit, adipisci consectetur iure molestiae aperiam similique voluptatibus assumenda! Harum voluptates laudantium aut a!</p>
+    </div>
+    <div class="flex-container d-flex flex-wrap">
+        <div class="flex-item m-md-5 p-md-5 border bg-light">2345</div>
+        <div class="flex-item m-md-5 p-md-5 border bg-light">6789</div>
+        <div class="flex-item m-md-5 p-md-5 border bg-light">1234</div>
+        <div class="flex-item m-md-5 p-md-5 border bg-light">5678</div>
     </div>
 </body>
 </html>
