--- a/Study-Bootstrap/index-bootstrap.html
+++ b/Study-Bootstrap/index-bootstrap.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/50c32869b8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
 <!-- header -->
@@ -16,7 +17,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">BOOKS</a>
+                <a class="navbar-brand nav-link" href="#"><i class="fa-solid fa-book-open-reader fa-2x mx-3"></i>BOOKS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,7 +26,7 @@
                     <div class="me-auto"></div>
                         <ul class="navbar-nav ">
                             <li class="nav-item">
-                                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                                <a class="nav-link" aria-current="page" href="#">HOME</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">COURSE</a>
@@ -56,11 +57,11 @@
     <!--  -->
     <div class="container text-center">
         <div class="row">
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-7 col-sm-12 text-white">
                 <h6>AUTHOR: DAILY TUITION</h6>
                 <h1>EXCITING ADVENTURE</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti fuga id harum, culpa ipsa dolore nulla fugiat dolores obcaecati libero in labore repellendus beatae illo ad placeat nostrum velit ducimus.</p>
-                <button class="btn btn-light">
+                <button class="btn btn-light primary-btn px-5 py-2">
                     By now for $5.99
                 </button>
             </div>
@@ -75,9 +76,9 @@
 <main>
 <!-- section-1 -->
 <section class="section-1">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-6 col-sm-12">
                 <div>
                     <div>
                         <img src="assets/pexels-photo-1904769.jpeg" width="100%" alt="">
@@ -85,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="col-md-7 col-sm-12">
+            <div class="col-md-6 col-sm-12">
                 <div class="panel">
                     <h1>Mr. Devid Smith</h1>
                     <p class="pt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem impedit obcaecati, debitis ullam illo ex magnam cumque incidunt magni sint, necessitatibus cum voluptas esse fugit, veritatis ipsam modi voluptate? Corrupti!</p>
@@ -97,78 +98,78 @@
 </section>
 <!-- section-2 -->
 <section>
-    <div class="section-2 container-fluid p-0">
+    <div class="section-2 container-fluid p-0 cover">
         <div class="content text-center">
             <h1>Some Features That Us Inique</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, ad. Tenetur error, consequuntur officia asperiores ullam fugit quam neque accusantium, quia nostrum velit commodi quisquam laudantium praesentium minus autem hic.</p>
         </div>
     </div>
     <div class="container-fluid text-center">
-        <div class="d-flex flex-wrap justify-content-center">
-            <div>
+        <div class="d-flex flex-wrap justify-content-center numbers">
+            <div class="rect">
                 <h1>2345</h1>
                 <p>Happy Client</p>
             </div>
-            <div>
+            <div class="rect">
                 <h1>6784</h1>
                 <p>Happy Client</p>
             </div>
-            <div>
+            <div class="rect">
                 <h1>1056</h1>
                 <p>Tickets submmitted</p>
             </div>
-            <div>
+            <div class="rect">
                 <h1>9152</h1>
                 <p>Total Project</p>
             </div>
         </div>
     </div>
-    <div class="text-center">
+    <div class="text-center purchase">
         <h1>Purchase Whatever you want</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    </div>
-    <div class="cards">
-        <div class="d-flex flex-row justify-content-center flex-wrap">
-            <div class="card">
-                <div class="card-body">
-                    <div class="title">
-                        <h5 class="card-title">PDF</h5>
+        <div class="cards">
+            <div class="d-flex flex-row justify-content-center flex-wrap">
+                <div class="card text-center">
+                    <div class="card-body">
+                            <div class="title">
+                                <h5 class="card-title">PDF</h5>
+                            </div>
+                        <p class="card-text">
+                            With supporting text below as a natural lead-in.
+                        </p>
+                        <div class="spricing">
+                            <h1>$77.99</h1>
+                            <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                        </div>
                     </div>
                 </div>
-                <p class="card-text">
-                    With supporting text below as a natural lead-in.
-                </p>
-                <div class="spricing">
-                    <h1>$77.99</h1>
-                    <a href="#" class="btn btn-dark pt-2">Purchase Now</a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="title">
-                        <h5 class="card-title">PDF</h5>
+                <div class="card text-center">
+                    <div class="card-body">
+                            <div class="title">
+                                <h5 class="card-title">E-book</h5>
+                            </div>
+                            <p class="card-text">
+                                With supporting text below as a natural lead-in.
+                            </p>
+                            <div class="spricing">
+                                <h1>$99.99</h1>
+                                <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <p class="card-text">
-                    With supporting text below as a natural lead-in.
-                </p>
-                <div class="spricing">
-                    <h1>$77.99</h1>
-                    <a href="#" class="btn btn-dark pt-2">Purchase Now</a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="title">
-                        <h5 class="card-title">PDF</h5>
+                <div class="card text-center">
+                    <div class="card-body">
+                        <div class="title">
+                            <h5 class="card-title">Print Copy</h5>
+                        </div>
+                        <p class="card-text">
+                            With supporting text below as a natural lead-in.
+                        </p>
+                        <div class="spricing">
+                            <h1>$58.99</h1>
+                            <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                        </div>
                     </div>
-                </div>
-                <p class="card-text">
-                    With supporting text below as a natural lead-in.
-                </p>
-                <div class="spricing">
-                    <h1>$77.99</h1>
-                    <a href="#" class="btn btn-dark pt-2">Purchase Now</a>
                 </div>
             </div>
         </div>
@@ -182,23 +183,23 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam odit nam quaerat cum delectus placeat ipsa omnis officia fuga! Debitis, quaerat minus ullam in quisquam vitae atque illo odio praesentium.</p>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6 col-12 text-right">
+    <div class="platform row">
+        <div class="col-md-6 col-12 text-end">
             <div class="desktop shadow-lg">
                 <div class="d-flex flex-row justify-content-center">
-                    <i class="fa-solid fa-desktop fa-3x py-2 pr-3"></i>
-                    <div class="text-left">
+                    <i class="fa-solid fa-desktop fa-3x py-2 ps-3"></i>
+                    <div class="text-start">
                         <h3 class="pt-1 m-0">Desktop</h3>
                         <p class="p-0 m-0">On Website</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-12 text-left">
+        <div class="col-md-6 col-12 text-start">
             <div class="desktop shadow-lg">
                 <div class="d-flex flex-row justify-content-center">
-                    <i class="fa-solid fa-mobile fa-3x py-2 pr-3"></i>
-                    <div class="text-left">
+                    <i class="fa-solid fa-mobile fa-3x py-2 ps-3"></i>
+                    <div class="text-start">
                         <h3 class="pt-1 m-0">Mobile</h3>
                         <p class="p-0 m-0">On Play Store</p>
                     </div>
@@ -213,66 +214,66 @@
         <h1>What our Reader's Say about us</h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
-    <div class="row">
+    <div class="team row">
         <!-- person-1 -->
         <div class="col-md-4 col-12 text-center">
-            <div class="card mr-2 d-inline-block show-lg">
-                <div class="card-img-top">
-                    <img src="assets/UI-face-3.jpg" class="img-fluid" alt="">
-                </div>
-            </div>
-            <div class="card-body">
-                <h3 class="card-title">Blalock Jolene</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
-                <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
-                <p>CEO at Google</p>
+            <div class="card ms-2 d-inline-block shadow-lg p-4">
+                    <div class="card-img-top">
+                        <img src="assets/UI-face-3.jpg" class="img-fluid border-radius p-4" alt="">
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Blalock Jolene</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
+                        <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
+                        <p>CEO at Google</p>
+                    </div>
             </div>
         </div>
         <!-- person-2 -->
         <div class="col-md-4 col-12 text-center">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <div class="card mr-2 d-inline-block show-lg">
-                        <div class="card-img-top">
-                            <img src="assets/UI-face-2.jpg" class="img-fluid" alt="">
+                    <div class="carousel-item active p-0">
+                        <div class="card ms-2 d-inline-block shadow-lg p-4">
+                            <div class="card-img-top">
+                                <img src="assets/UI-face-2.jpg" class="img-fluid border-radius p-4" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Barbara</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
+                                <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
+                                <p>CEO at Google</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h3 class="card-title">Barbara</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
-                        <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
-                        <p>CEO at Google</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <div class="card mr-2 d-inline-block show-lg">
-                        <div class="card-img-top">
-                            <img src="assets/UI-face-1.jpg" class="img-fluid" alt="">
+                    <div class="carousel-item p-0">
+                        <div class="card ms-2 d-inline-block shadow-lg p-4">
+                            <div class="card-img-top">
+                                <img src="assets/UI-face-1.jpg" class="img-fluid border-radius p-4" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Allen Agnes</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
+                                <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
+                                <p>CEO at Google</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h3 class="card-title">Allen Agnes</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
-                        <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
-                        <p>CEO at Google</p>
-                    </div>
-                  </div>
                 </div>
-              </div>
+            </div>
         </div>
         <!-- person-3 -->
         <div class="col-md-4 col-12 text-center">
-            <div class="card mr-2 d-inline-block show-lg">
+            <div class="card ms-2 d-inline-block shadow-lg p-4">
                 <div class="card-img-top">
-                    <img src="assets/UI-face-4.jpg" class="img-fluid" alt="">
+                    <img src="assets/UI-face-4.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
-            </div>
-            <div class="card-body">
-                <h3 class="card-title">Olivia Louis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
-                <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
-                <p>CEO at Google</p>
+                <div class="card-body">
+                    <h3 class="card-title">Olivia Louis</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, minus magni repellat tempora deleniti commodi ipsum perspiciatis earum voluptatum molestias recusandae odit facere, minima temporibus perferendis dicta voluptas dolores eos?</p>
+                    <a href="#" class="text-secondary text-decoration-none">go somewhere</a>
+                    <p>CEO at Google</p>
+                </div>
             </div>
         </div>
     </div>
@@ -283,14 +284,14 @@
     <div class="container-fluid p-0">
         <div class="row">
             <div class="col-md-5 col-12">
-                <h4>About us</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis autem quisquam harum, porro sint eveniet recusandae libero ex</p>
-                <p>Reiciendis autem quisquam harum</p>
-                <p>copyright @2019 All rights reserved / This template is made with by Daily Tuition</p>
+                <h4 class="text-light">About us</h4>
+                <p class="text-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis autem quisquam harum, porro sint eveniet recusandae libero ex</p>
+                <p class="text-p">Reiciendis autem quisquam harum</p>
+                <p class="text-p">copyright @2019 All rights reserved / This template is made with by <span>Daily Tuition</span></p>
             </div>
             <div class="col-md-5 col-12">
-                <h4>Newsletter</h4>
-                <p>Stay undated</p>
+                <h4 class="text-light">Newsletter</h4>
+                <p class="text-p">Stay undated</p>
                 <form class="form-inline">
                     <div class="ps-0">
                         <div class="input-group">
@@ -306,7 +307,7 @@
             </div>
             <div class="col-md-2 col-12">
                 <h4 class="text-light">Follow Us</h4>
-                <p>Let us be social</p>
+                <p class="text-p">Let us be social</p>
                 <div class="text-light">
                     <i class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-instagram"></i>
