--- a/CASESTUDY/index.html
+++ b/CASESTUDY/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header -->
     <header>
         <div class="header1">
             <div class="header__banner">
                 <ul class="header__banner-1" type="none">
-                    <li class="header__banner-2">Tiếng Việt</li>
-                    <li class="header__banner-2">Trung tâm giảng dạy</li>
-                    <li class="header__banner-2">Đăng ký nhận bản tin điện tử</li>
-                    <li class="header__banner-2">Liên hệ</li>
-                    <li class="header__banner-2">Blog</li>
-                    <li class="header__banner-2">tìm kiếm</li>
+                    <li class="header__banner-Link1">Tiếng Việt</li>
+                    <li class="header__banner-Link1">Trung tâm giảng dạy</li>
+                    <li class="header__banner-Link1">Đăng ký nhận bản tin điện tử</li>
+                    <li class="header__banner-Link1">Liên hệ</li>
+                    <li class="header__banner-Link1">Blog</li>
+                    <li class="header__banner-Link1">tìm kiếm</li>
                 </ul>
             </div>
 
@@ -28,15 +29,15 @@
                 </div>
                 <div class="header__nav2">
                     <ul type="none">
-                        <li class="header__nav-li"><a href="">Dạy tiếng anh</a></li>
-                        <li class="header__nav-li"><a href="">chương trình UK/Viet Nam Season</a></li>
+                        <li class="header__nav-li"><a class="header__nav-link" href="">Dạy tiếng anh</a></li>
+                        <li class="header__nav-li"><a class="header__nav-link" href="">chương trình UK/Viet Nam Season</a></li>
                     </ul>
                 </div>
             </div>
 
             <div class="header__navbar">
                 <ul type="none">
-                    <li class="herder-navbar-li"><a href="https://www.britishcouncil.vn/"></a></li>
+                    <li class="herder-navbar-li"><a href=""><i class="fa-solid fa-house"></i></a></li>
                     <li class="herder-navbar-li"><a href="">học tiếng anh</a></li>
                     <li class="herder-navbar-li"><a href="">IELTS và kỳ thi quốc tế</a></li>
                     <li class="herder-navbar-li"><a href="">giáo dục vương quốc anh</a></li>
@@ -44,7 +45,111 @@
                     <li class="herder-navbar-li"><a href="">nghệ thuật, giáo dục xã hội</a></li>
                 </ul>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
+
+    <!-- main -->
+    <main>
+        <!-- section1 -->
+        <section class="section1">
+            <h1>Học tiếng anh</h1>
+
+            <iframe width="634" height="356" src="https://www.youtube.com/embed/k20NFxALSnM" title="British Council: Các bước đăng ký học với Hội đồng Anh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h2>Học tiếng Anh cùng các chuyên gia trên thế giới</h2>
+            <p>Chúng tôi có hơn 80 năm kinh nghiệm về giảng dạy tiếng Anh và được hơn 100 triệu người học trên toàn thế giới tin tưởng mỗi năm.</p>
+            <p>Bạn có thể học cùng chúng tôi thông qua các lớp học và khóa học tiếng Anh trực tuyến hoặc tại các trường dạy tiếng Anh của chúng tôi.</p>
+            <p>Các giáo viên có trình độ chuyên môn của chúng tôi sẽ giúp bạn đạt được mục tiêu của mình – hãy tham gia với chúng tôi ngay hôm nay.</p>
+
+            <ul type="">
+                <li><a href="">Các trung tâm dạy tiếng anh của chúng tôi</a></li>
+                <li><a href="">hành trình phát triển từ trẻ năm tuổi đến đại học và sau đại học</a></li>
+            </ul>
+
+            <h2>Bắt đầu hành trình học tiếng Anh của bạn</h2>
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/tieng_anh_nguoi_lon_40.jpg?itok=uKh2PTMV" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+            
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/anh_email_hs_0.jpg?itok=otZ-NMCo" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/630x354-70-target-score-viet.jpg?itok=7nrMO4ln" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/corporate_english_solutions.jpg?itok=tpffNwCv" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/learn_english_online.jpg?itok=xZp21dco" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section__inf">
+                <div class="section__inf1">
+                    <div class="section__inf1-img">  
+                        <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/hoi_dong_anh_ha_noi.jpg?itok=uR8DPhva" alt="">
+                    </div>
+                    <div class="section__inf1-text">
+                    <h3><a href="">Tiếng Anh cho người lớn</a></h3>
+                    <p>Dù mục tiêu của bạn là thúc đẩy sự nghiệp, chuẩn bị cho việc học hay cải thiện các mối quan hệ xã hội, các khóa học của chúng tôi đều có thể giúp bạn đạt được mục tiêu của mình.</p>
+                    </div>
+                </div>
+            </div>
+
+            <p>Thành công ngày mai bắt đầu từ hôm nay</p>
+            <div>
+                <p>Học viên mới cần làm bài kiểm tra trình độ để xác định khóa học phù hợp với khả năng và nhu cầu của bạn.</p>
+            </div>
+        </section>
+
+        <!-- section2 -->
+        <section>
+
+        </section>
+        </main>
 </body>
 </html>
