--- a/CASESTUDY/index.html
+++ b/CASESTUDY/index.html
@@ -43,11 +43,22 @@
                 <div class=" col-md-12 col-12 navbar__nav">
                     <ul type="none" class="navbar__nav1">
                         <li class="navbar-link"><a href=""><i class="fa-solid fa-house"></i></a></li>
-                        <li class="navbar-link"><a href="">Học tiếng anh</a></li>
-                        <li class="navbar-link"><a href="">IELTS và kỳ thi quốc tế</a></li>
-                        <li class="navbar-link"><a href="">giáo dục vương quốc anh</a></li>
-                        <li class="navbar-link"><a href="">sự kiện</a></li>
-                        <li class="navbar-link"><a href="">nghệ thuật, giáo dục xã hội</a></li>
+                        <li class="navbar-link navbar-link-1"><a href="">Học tiếng anh</a>
+                            <ul class="navbar-link-inf" type="none">
+                                <li><a href="">đăng ký khóa học</a></li>
+                                <li><a href="">Tiếng anh người lớn</a></li>
+                                <li><a href="">Khóa học tiếng anh cho trẻ em và thanh thiếu niên</a></li>
+                                <li><a href="">Tiếng anh luyện thi IELTS</a></li>
+                                <li><a href="">Giải pháp tiếng Anh giành cho doanh nghiệp</a></li>
+                                <li><a href="">Học tiếng Anh trực tuyến</a></li>
+                                <li><a href="">Các trung tâm dạy tiếng anh của chúng tôi</a></li>
+                                <li><a href="">Vì sao bạn nên lựa chọn học tiếng Anh của chúng tôi?</a></li>
+                            </ul>
+                        </li>
+                        <li class="navbar-link navbar-link-2 "><a href="">IELTS và kỳ thi quốc tế</a></li>
+                        <li class="navbar-link navbar-link-3"><a href="">giáo dục vương quốc anh</a></li>
+                        <li class="navbar-link navbar-link-4"><a href="">sự kiện</a></li>
+                        <li class="navbar-link navbar-link-5"><a href="">nghệ thuật, giáo dục xã hội</a></li>
                     </ul>
                 </div>
             </div>
