--- a/case_study_end/Case__Study.html
+++ b/case_study_end/Case__Study.html
@@ -16,18 +16,18 @@
         <div class="container">
             <div class="row header1">
                 <!-- banner -->
-                <div class=" col-md-12 col-12 header__banner">
-                    <ul class="header__banner-1" type="none">
+                <div class=" col-md-12 header__banner">
+                    <ul class="header__banner-1" type="none"> 
                         <li class="header__banner-link"><a href="">Tiếng Việt</a></li>
                         <li class="header__banner-link"><a href="">Trung tâm giảng dạy</a></li>
                         <li class="header__banner-link"><a href="">Đăng ký nhận bản tin điện tử</a></li>
                         <li class="header__banner-link"><a href="">Liên hệ</a></li> 
                         <li class="header__banner-link"><a href="">Blog</a></li>
-                        <li class="header__banner-link"><a href="">tìm kiếm<i class="fa-solid  fa-magnifying-glass"></i></a></li>
+                        <li class="header__banner-link1"><a href="">tìm kiếm<i class="fa-solid  fa-magnifying-glass"></i></a></li>
                     </ul>
                 </div>
                 <!-- logo + slogan -->
-                    <div class=" col-md-12 col-12 header__logo">
+                    <div class=" col-md-12 header__logo">
                         <div class="header__nav-1">
                             <a class="header__nav-logo" href="https://www.britishcouncil.vn/">logo</a>
                             <span class="header__nav-slogan">VIỆT NAM</span>
@@ -40,9 +40,9 @@
                         </div>
                     </div>
                 <!-- navbar -->
-                <div class=" col-md-12 col-12 navbar__nav">
+                <div class=" col-md-12 navbar__nav">
                     <ul type="none" class="navbar__nav1">
-                        <li class="navbar-link"><a href=""><i class="fa-solid fa-house"></i></a></li>
+                        <li class="navbar-link"><a  href=""><i class="fa-solid fa-house"></i></a></li>
                         <li class="navbar-link navbar-link-1"><a href="">Học tiếng anh</a>
                             <ul class="navbar-link-inf" type="none">
                                 <li><a href="">đăng ký khóa học</a></li>
@@ -61,6 +61,18 @@
                         <li class="navbar-link navbar-link-5"><a href="">nghệ thuật, giáo dục xã hội</a></li>
                     </ul>
                 </div>
+
+                <div class="navbar-sm">
+                    <ul type="none" class="navbar-sm-ul"><i class="fa-solid fa-list"></i></i>
+                        <li class="navbar__sm-link"><a href="">Học tiếng anh</a></li>
+                        <li class="navbar__sm-link"><a href="">IELTS và kỳ thi quốc tế</a></li>
+                        <li class="navbar__sm-link"><a href="">giáo dục vương quốc anh</a></li>
+                        <li class="navbar__sm-link"><a href="">sự kiện</a></li>
+                        <li class="navbar__sm-link"><a href="">nghệ thuật, giáo dục xã hội</a></li>
+                    </ul>
+
+                </div>
+                
             </div>
         </div>
     </header>
