--- a/case_study_end/Case__Study.html
+++ b/case_study_end/Case__Study.html
@@ -85,7 +85,7 @@
             <!-- section1 -->
             <div class="section1 col-md-8 col-12">
 
-                    <iframe width="90%" height="356" src="https://www.youtube.com/embed/k20NFxALSnM" title="British Council: Các bước đăng ký học với Hội đồng Anh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="section1__iframe" width="90%" height="356" src="https://www.youtube.com/embed/k20NFxALSnM" title="British Council: Các bước đăng ký học với Hội đồng Anh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3>Học tiếng Anh cùng các chuyên gia trên thế giới</h3>
                     <p>Chúng tôi có hơn 80 năm kinh nghiệm về giảng dạy tiếng Anh và được hơn 100 triệu người học trên toàn thế giới tin tưởng mỗi năm.</p>
                     <p>Bạn có thể học cùng chúng tôi thông qua các lớp học và khóa học tiếng Anh trực tuyến hoặc tại các trường dạy tiếng Anh của chúng tôi.</p>
@@ -102,7 +102,7 @@
                         <div>
                             <a href="">
                                 <div class=" col-md-4 col-12 section__inf1-img">  
-                                    <img class="" src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/tieng_anh_nguoi_lon_40.jpg?itok=uKh2PTMV" alt="">
+                                    <img class="section__inf1-img" src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/tieng_anh_nguoi_lon_40.jpg?itok=uKh2PTMV" alt="">
                                 </div>
                                 <div class="col-md-8 col-12 section__inf1-text">
                                     <h3><a href="">Tiếng Anh cho người lớn</a></h3>
@@ -180,10 +180,10 @@
                     <div class="section__inf1">
                         <div>
                             <a href="">
-                                <div class="col-md-4 col-12 section__inf1-img">  
+                                <div class="col-lg-4 col-md-6 col-12 section__inf1-img">  
                                     <img src="https://www.britishcouncil.vn/sites/default/files/styles/bc-landscape-300x169/public/hoi_dong_anh_ha_noi.jpg?itok=uR8DPhva" alt="">
                                 </div>
-                                <div class="col-md-8 col-12 section__inf1-text">
+                                <div class="col-lg-8 col-md-6 col-12 section__inf1-text">
                                 <h3><a href="">Các trung tâm dạy tiếng Anh của chúng tôi</a></h3>
                                 <p>Tìm hiểu thêm về các Trung tâm Giảng dạy tại Hà Nội và TP. Hồ Chí Minh của Hội đồng Anh.</p>
                                 </div>
@@ -192,10 +192,10 @@
                     </div>
                    
                 </div>
-                <div class="section__inf2">
+                <div class="section__inf2 col-12">
                 <p class="section__inf2-text">Thành công ngày mai bắt đầu từ hôm nay</p>
                 </div>  
-                <div class="section__inf3">
+                <div class="section__inf3 col-12">
                     <div>
                         <p class="section__inf2-text">Học viên mới cần làm bài kiểm tra trình độ để xác định khóa học phù hợp với khả năng và nhu cầu của bạn.</p>
                     </div>
